--- a/example/package.json
+++ b/example/package.json
@@ -13,7 +13,9 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0"
+    "@types/react-dom": "^18.0.0",
+    "sass": "^1.54.0",
+    "typescript": "^4.7.4"
   },
   "scripts": {
     "start": "react-scripts start",
