--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "main": "./lib/src/index.js",
   "scripts": {
     "build": "tsc",
+    "rebuild": "yarn clean && tsc",
+    "bnu": "yarn rebuild && cd example && yarn update-pkg",
     "clean": "rm -rf ./lib/",
     "lint": "eslint ./src/ --fix",
     "prepare": "husky install",
