--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "scripts": {
     "build": "tsc",
     "rebuild": "yarn clean && tsc",
-    "bnu": "yarn rebuild && cd example && yarn update-pkg",
+    "example-update": "cd example && yarn update-pkg",
     "clean": "rm -rf ./lib/",
     "lint": "eslint ./src/ --fix",
     "prepare": "husky install",
     "semantic-release": "semantic-release",
     "test:watch": "jest --watch",
     "test": "jest --coverage",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "dev": "tsc-watch --onSuccess \"yarn example-update\""
   },
   "repository": "https://github.com/mikezzb/typescript-template.git",
   "author": "mikezzb <mikezhoudev@gmail.com>",
@@ -35,6 +36,7 @@
     "prettier": "^2.7.1",
     "ts-jest": "^28.0.7",
     "ts-node": "^10.9.1",
+    "tsc-watch": "^5.0.3",
     "typescript": "^4.7.4"
   }
 }
