--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "jest --coverage",
     "typecheck": "tsc --noEmit",
     "dev": "tsc-watch --onSuccess \"yarn example-update\"",
+    "example-start": "cd example && yarn start",
     "install-all": "yarn install && yarn build && cd example && yarn install"
   },
   "repository": "https://github.com/mikezzb/typescript-template.git",
