--- a/example/package.json
+++ b/example/package.json
@@ -23,7 +23,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "update-pkg": "yarn upgrade my-package"
+    "relink": "yarn link my-package"
   },
   "eslintConfig": {
     "extends": [
