--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "typecheck": "tsc --noEmit",
     "dev": "tsc-watch --onSuccess \"yarn example-update\"",
     "clear": "yarn clean && rm -rf node_modules && cd example && rm -rf node_modules",
-    "bootstrap": "python setup.py && yarn && yarn build && yarn example && gc -am \"Chore: init package\""
+    "bootstrap": "python setup.py && yarn && yarn build && yarn example && git commit -am \"Chore: init package\""
   },
   "repository": "https://github.com/mikezzb/typescript-template.git",
   "author": "mikezzb <mikezhoudev@gmail.com>",
