--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "build": "tsc",
     "rebuild": "yarn clean && yarn build",
     "example": "yarn --cwd example",
-    "eup": "yarn build && yarn example relink",
     "clean": "rm -rf ./lib/",
     "lint": "eslint ./src/ --fix",
     "prepare": "husky install",
@@ -14,7 +13,7 @@
     "test:watch": "jest --watch",
     "test": "jest --coverage",
     "typecheck": "tsc --noEmit",
-    "dev": "tsc-watch --onSuccess \"yarn example-update\"",
+    "dev": "tsc-watch --onSuccess \"yarn example relink\"",
     "clear": "yarn clean && rm -rf node_modules && cd example && rm -rf node_modules",
     "bootstrap": "python setup.py && yarn && yarn build && yarn example && git commit -am \"Chore: init package\""
   },
