--- a/example/package.json
+++ b/example/package.json
@@ -2,6 +2,7 @@
   "name": "example",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://mikezzb.github.io/my-package",
   "dependencies": {
     "my-package": "link:../lib",
     "react": "^18.2.0",
@@ -15,6 +16,7 @@
     "@testing-library/user-event": "^13.2.1",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "gh-pages": "^4.0.0",
     "sass": "^1.54.0",
     "typescript": "^4.7.4"
   },
@@ -23,7 +25,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "relink": "yarn link my-package"
+    "relink": "yarn link my-package",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
