fix: husky & gc

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "typecheck": "tsc --noEmit",
     "dev": "tsc-watch --onSuccess \"yarn example relink\"",
     "clear": "yarn clean && rm -rf node_modules && cd example && rm -rf node_modules",
-    "bootstrap": "python setup.py && yarn && yarn build && yarn example && gc --amend --no-edit"
+    "bootstrap": "python setup.py && yarn && yarn build && yarn example && git commit --amend --no-edit"
   },
   "repository": "https://github.com/mikezzb/typescript-template.git",
   "author": "mikezzb <mikezhoudev@gmail.com>",
